gitops-meshappcolor/colorapp/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: istio-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: MUTUAL # SIMPLE   # You can also use TERMINATE → both work fine with cert-manager secrets.
        credentialName: cert-doordress-us   # This is the name of your Kubernetes Secret in istio-system namespace.
      hosts:
        - "www.doordress.us"
        - "doordress.us"
